--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 header {
@@ -82,4 +83,41 @@ section.game-status > h2 {
     gap: 4px;
     justify-content: center;
     margin-top: 30px;
+}
+
+.keyboard {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 600px;
+    margin-top: 50px;
+}
+
+.keyboard > button {
+    width: 40px;
+    height: 40px;
+    background-color: #FCBA29;
+    color: #1E1E1E;
+    border: 1px solid #D7D7D7;
+    border-radius: 4px;
+    font-size: 1rem;
+    cursor: pointer;
+    margin: 6px;
+}
+
+.keyboard > button:active {
+    background-color: #10A95B;
+}
+
+button.new-game {
+    background-color: #11B5E5;
+    border: 1px solid #D7D7D7;
+    border-radius: 4px;
+    width: 125px;
+    height: 40px;
+    padding: 6px 12px;
+    display: block;
+    margin-inline: auto;
+    cursor: pointer;
+    margin-top: 10px;
 }
