--- a/index.css
+++ b/index.css
@@ -109,6 +109,14 @@ section.game-status > h2 {
     background-color: #10A95B;
 }
 
+.keyboard > button.guessed {
+    background-color: #1c8300;
+}
+
+.keyboard > button.not-guessed {       
+    background-color: #c60000;
+}
+
 button.new-game {
     background-color: #11B5E5;
     border: 1px solid #D7D7D7;
