--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 * {
     box-sizing: border-box;
 }
@@ -62,6 +64,26 @@ section.game-status > h2 {
     text-align: center;
     width: fit-content;
     padding: 5px 10px;
+}
+
+span.chip {
+    border-radius: 3px;
+    padding: 4.5px;
+    position: relative;
+}
+
+span.chip.lost::before {
+    content: "💀";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: 0.85rem;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .letter-box{
