--- a/index.css
+++ b/index.css
@@ -15,6 +15,12 @@ body {
     align-items: center;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 header {
     text-align: center;
 }
@@ -39,6 +45,8 @@ section.game-status {
     min-height: 60px;
     border-radius: 4px;
     margin-block: 30px;
+    width: 100%;
+    max-width: 600px;
 }
 
 section.game-status.won {
@@ -63,7 +71,7 @@ section.game-status > h2 {
     gap: 5px;
     justify-content: center;
     max-width: 600px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .language-chip {
