--- a/index.css
+++ b/index.css
@@ -145,6 +145,11 @@ span.chip.lost::before {
     margin: 6px;
 }
 
+section.keyboard > button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5
+}
+
 section.keyboard > button.correct {
     background-color: #1c8300;
 }
