--- a/index.css
+++ b/index.css
@@ -41,12 +41,13 @@ section.game-status {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     color: #F9F4DA;
+    width: 100%;
+    max-width: 600px;
     min-height: 60px;
     border-radius: 4px;
     margin-block: 30px;
-    width: 100%;
-    max-width: 600px;
 }
 
 section.game-status.won {
@@ -55,6 +56,20 @@ section.game-status.won {
 
 section.game-status.lost {
     background-color: #BA2A2A;
+}
+
+section.game-status.farewell {
+    background-color: #7A5EA7;
+    border: 1px dashed #323232;
+}
+
+section.game-status > p {
+    margin: 5px;
+}
+
+section.game-status > p.farewell-message {
+    font-style: italic;
+    font-weight: 400;
 }
 
 section.game-status > p {
@@ -102,7 +117,14 @@ span.chip.lost::before {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
-.letter-box{
+section.current-word {
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+    margin-top: 30px;
+}
+
+section.current-word > span {
     width: 60px;
     height: 60px;
     background-color: #323232;
@@ -114,15 +136,11 @@ span.chip.lost::before {
     border-bottom: 2px solid #F9F4DA;
     margin: 0 2px;
     border-radius: 3px;
-
+    color: #F9F4DA;
 }
 
-.current-word {
-    display: flex;
-    gap: 4px;
-    justify-content: center;
-    margin-top: 30px;
-     color: #F9F4DA;
+section.current-word > span.missed-letter {
+    color: #EC5D49;
 }
 
 .keyboard {
@@ -130,7 +148,7 @@ span.chip.lost::before {
     flex-wrap: wrap;
     justify-content: center;
     max-width: 600px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .keyboard > button {
