--- a/index.css
+++ b/index.css
@@ -47,6 +47,12 @@ section.timer {
     margin-bottom: 10px;
 }
 
+section.timer > span {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
 section.game-status {
     display: flex;
     flex-direction: column;
